--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,15 +1,13 @@
 name: Python package
 
-on:
-  push:
-
+on: [push]
 jobs:
   build:
-    runs-on: ubuntu-latest
 
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+
+    - uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
@@ -22,4 +20,4 @@ jobs:
       run: pip install -r requirements.txt
 
     - name: Run tests
-      run: python manage.py test
+      run: python myscript.py
